assets/css/pages/dashboard.scss
$board-bg-color: white;

#dashboard {

  h1 {
    margin-top: 60px;
    position: relative;
  }

  .content {
    background: rgba($board-bg-color, 0.0);
    min-height: 500px;
    border-radius: 2px;

  .center-cols > .col {
    float:none; /* disable the float */
    display: inline-block; /* make blocks inline-block */
    text-align: initial; /* restore text-align to default */
  }

    // ================== Balance Board ==========================

    #balance-card {
      @extend .z-depth-3, .black-text;
      background: rgba($board-bg-color, 0.9);
      min-width: 300px;
      height: 137px;

      .card-image {
        max-width: 25%;
        margin: 30px 0 0 40px;
      }

      .card-title {
        font-size: 27px;
      }

      .card-content {
        padding: 18px;
        max-width: 60%;
      }

      .updating {
        font-size: 8px;
        line-height: 8px;
        color: grey;
      }

      p {
        font-size: 27px;
      }

      .user-mail {
        margin-top: 3px;
        font-size: 10px;
      }
    }

    // ================== Recent Transactions ===================
    .recent-transactions {
      margin-top: 40px;
      color: white;

      h1 {
        font-size: 25px;
        font-weight: 300;
      }

      .transactions-update {
        left: 40%;
        width: 20%;
        margin: 0;
        background: transparent;

        .indeterminate {
          background-color: white;
        }
      }

      .transactions {
        @extend .z-depth-0;
        background: transparent;
        min-height: 400px;

        li:last-child .row {
          border-bottom: 0; // remove last border at the bottom
        }

        .collapsible-header {
          background: transparent;
        }

        &.collapsible {
          border: 0;
          margin: 0.5rem 0 0 0;
        }

        .transaction {
          @extend .hoverable;

          .collapsible-body {
            padding: 2rem 1rem 2rem 1rem;
          }

          .collapsible-body .row {
            margin-bottom: 15px;
          }

          a {
            text-decoration: underline;
          }
        }

        .col {
          margin-bottom: -7px;

          &.icon {
            padding-left: 0;
          }
        }

        .row {
          margin-bottom: 0;
        }
      }

      .pagination {
        margin-top: 0;
      }
    }

    .no-transactions {
      text-align: center;
    }
  }
}

